iptables
# Generated by iptables-save v1.4.7 on Tue Mar 28 21:41:03 2017
*filter
:INPUT DROP [2:152]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2:152]
-A INPUT -p tcp -m tcp --dport 43888 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9001 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9002 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9003 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9004 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9005 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10001:10010 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9000 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9001 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9002 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9003 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9004 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 9005 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 3000 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 8080 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 8081 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 10001:10010 -j ACCEPT 
COMMIT
# Completed on Tue Mar 28 21:41:03 2017
# Generated by iptables-save v1.4.7 on Tue Mar 28 21:41:03 2017
*nat
:PREROUTING ACCEPT [569:44344]
:POSTROUTING ACCEPT [289:20588]
:OUTPUT ACCEPT [289:20588]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
-A PREROUTING -p tcp -m tcp --dport 43888 -j REDIRECT --to-ports 21 
COMMIT
# Completed on Tue Mar 28 21:41:03 2017
